Adicionar tabela de horarios cadastrados - BASIS-214044

--- a/frontend/src/app/exames/components/formulario-horarios-agendados/formulario-horarios-agendados.component.html
+++ b/frontend/src/app/exames/components/formulario-horarios-agendados/formulario-horarios-agendados.component.html
@@ -1,30 +1,29 @@
 <div class="p-col-12 p-grid">
             
-    <div class="p-md-2 p-fluid" [formGroup]="agendarHorario">
+    <div class="p-md-2 p-fluid sm-top-margin" [formGroup]="agendarHorario">
         Horário início
         <p-calendar [(ngModel)]="horarioInicio" [timeOnly]="true" 
         inputId="horarioInicio" formControlName="horaInicio">
         </p-calendar>
     </div>  
 
-    <div class="p-md-2 p-fluid" [formGroup]="agendarHorario">
+    <div class="p-md-2 p-fluid sm-top-margin" [formGroup]="agendarHorario">
         Horário fim
-        <p-calendar [(ngModel)]="horarioFim" [timeOnly]="true" 
+        <p-calendar [(ngModel)]="horaFim" [timeOnly]="true" 
         inputId="horarioFim" formControlName="horaFim">
         </p-calendar>
     </div>
     
-    <div class="p-md-2 p-fluid" [formGroup]="agendarHorario">
+    <div class="p-md-2 p-fluid sm-top-margin" [formGroup]="agendarHorario">
         Nº de horários
-        <span class="md-inputfield p-float-label" style="margin-top: 5px;" 
-        formControlName="numeroDeHorarios">
-            <input type="number" pInputText>
+        <span class="md-inputfield p-float-label">
+            <input type="number" [(ngModel)]="numeroDeHorarios" formControlName="numeroDeHorarios" pInputText>
         </span>
     </div>
 
     <div class="p-md-2 p-fluid">
         Dia
-        <span class="md-inputfield p-float-label" style="margin-top: 5px;">
+        <span class="md-inputfield p-float-label sm-top-margin">
             <p-dropdown [options]="dia" [showClear]="true" placeholder="Selecione"
                 [resetFilterOnHide]="true" [(ngModel)]="diaSelecionado">
             </p-dropdown>
@@ -34,26 +33,26 @@
 
 <div class="p-col-12 p-grid">
 
-    <div class="p-md-2 p-fluid" [formGroup]="agendarHorario">
+    <div class="p-md-2 p-fluid sm-top-margin" [formGroup]="agendarHorario">
         Duração
         <p-calendar [(ngModel)]="duracao" [timeOnly]="true" inputId="duracao"
-        formControlName="duracao">
+        formControlName="duracao" [defaultDate]="duracaoPadrao" [stepMinute]="5">
         </p-calendar>
     </div>
 
     <div class="p-md-2 p-fluid">
         Tipo de marcação
-        <span class="md-inputfield p-float-label" style="margin-top: 5px;">
-            <p-dropdown [options]="tiposDeMarcacao" [optionLabel]="'tipoDeMarcacao'" [optionValue]="'id'" [filter]="true"
-                [resetFilterOnHide]="true" [showClear]="true" 
-                placeholder="Selecione">
+        <span class="md-inputfield p-float-label sm-top-margin">
+            <p-dropdown [options]="tiposDeMarcacao" [optionLabel]="'tipoDeMarcacao'" 
+                [optionValue]="'id'" [filter]="true" placeholder="Selecione"
+                [resetFilterOnHide]="true" [showClear]="true">
             </p-dropdown>
         </span>
     </div>
 
     <div class="p-md-2 p-fluid" [formGroup]="agendarHorario">
         Ativo
-        <div style="margin-top: 5px; margin-bottom: 10px;">
+        <div class="sm-top-margin mid-bottom-margin">
             <p-radioButton name="ativo" value="true" label="Sim" class="separator-radio" 
             formControlName="ativo"></p-radioButton>
             <p-radioButton name="ativo" value="false" label="Não" class="separator-radio" 
@@ -64,7 +63,7 @@
     
     <div class="p-md-2 p-fluid" [formGroup]="agendarHorario">
         Exclusivo
-        <div style="margin-top: 5px; margin-bottom: 10px;">
+        <div class="sm-top-margin mid-bottom-margin">
             <p-radioButton name="exclusivo" value="true" label="Sim" class="separator-radio" 
             formControlName="exclusivo"></p-radioButton>
             <p-radioButton name="exclusivo" value="false" label="Não" class="separator-radio" 
@@ -81,6 +80,7 @@
         <button
             pButton type="button" icon="pi pi-check" 
             (click)="agendarHorarioGrade()"
+            [disabled]="!validarFormulario()"
             label="Gerar disponibilidade"
         ></button>
     </div>
@@ -98,3 +98,5 @@
         ></button>
     </div>
 </div>
+
+<app-tabela-horarios-agendados></app-tabela-horarios-agendados>
