--- a/frontend/src/app/exames/components/formulario-grade-de-agendamento/formulario-grade-de-agendamento.component.html
+++ b/frontend/src/app/exames/components/formulario-grade-de-agendamento/formulario-grade-de-agendamento.component.html
@@ -30,13 +30,13 @@
     </div>
 </div>
 
-<div class="p-col-12 p-grid">
+<div class="p-col-12 p-grid" [formGroup]="cadastroGrade">
 
     <div class="p-md-2 p-fluid">
         Grupo de exames
         <span class="md-inputfield p-float-label" style="margin-top: 5px;">
             <p-dropdown [options]="gruposDeExame" [optionLabel]="'nome'" [optionValue]="'id'" [filter]="true"
-                [resetFilterOnHide]="true" [showClear]="true"
+                [resetFilterOnHide]="true" [showClear]="true" formControlName="grupoGradeId"
                 [(ngModel)]="grupoSelecionado" placeholder="Selecione">
             </p-dropdown>
         </span>
