--- a/frontend/src/app/exames/components/material-exames/material-exames.component.html
+++ b/frontend/src/app/exames/components/material-exames/material-exames.component.html
@@ -361,7 +361,7 @@
                 </div>
             </div>
 
-            <h3>Informações Adicionais</h3>
+            <h3>Informações adicionais</h3>
 
             <div class="p-grid">
                 <div class="p-col">
@@ -478,15 +478,14 @@
                 <label>volume da amostra</label>
             </div>
         </div>
-        <div class="p-grid p-justify-start">
-            <button class="p-col-2" pButton type="button" label="Adicionar" icon="pi pi-save" (click)="adicionarAmostra()"
-                [disabled]="!validarAmostra()"></button>
-        </div>
-        <div class="p-grid">
-            <button
-                class="p-col-2" pButton type="button" label="Limpar" icon="pi pi-save" (click)="limparAmostras()"
-            ></button>
-        </div>
+            <div class="p-grid p-justify-start">
+                <button
+                class="p-col-2" pButton type="button"
+                label="Adicionar" icon="pi pi-save"
+                (click)="adicionarAmostra()"
+                [disabled]="!validarAmostra()">
+            </button>
+            </div>
     </p-accordionTab>
 </p-accordion>
 
@@ -515,6 +514,12 @@
             </tr>
         </ng-template>
     </p-table>
+
+    <div class="p-grid" style="margin-top: 10px;">
+        <button
+            class="p-col-2" pButton type="button" label="Limpar tabela" icon="pi pi-save" (click)="limparAmostras()"
+        ></button>
+    </div>
 
 </div>
 
