--- a/frontend/src/app/exames/components/grade-agendamentos/grade-agendamentos.component.html
+++ b/frontend/src/app/exames/components/grade-agendamentos/grade-agendamentos.component.html
@@ -7,7 +7,7 @@
             <app-formulario-grade-de-agendamento [grade]="grade" (gradeSalva)="onGradeSalva($event)"></app-formulario-grade-de-agendamento>
         </p-tabPanel>
 
-        <p-tabPanel *ngIf="grade.id !== undefined" header="Horários Agendados">
+        <p-tabPanel header="Horários Agendados">
             <app-formulario-horarios-agendados [grade]="grade"></app-formulario-horarios-agendados>
         </p-tabPanel>
 
