--- a/frontend/src/app/exames/components/formulario-horarios-agendados/formulario-horarios-agendados.component.html
+++ b/frontend/src/app/exames/components/formulario-horarios-agendados/formulario-horarios-agendados.component.html
@@ -93,6 +93,7 @@
         <button
             pButton type="button" icon="pi pi-check" 
             (click)="agendarHorarioGrade()"
+            [disabled]="!validarFormulario()"
             label="Gerar"
         ></button>
     </div>
