--- a/frontend/src/app/farmacia/farmacia/cadastro-medicamento/cadastro-medicamento.component.html
+++ b/frontend/src/app/farmacia/farmacia/cadastro-medicamento/cadastro-medicamento.component.html
@@ -108,7 +108,11 @@
                         ></button>
                     </div>
                     <div class="p-md-5 p-sm-5">
-                        <button pButton type="button" label="Cancelar" routerLink="/medicamentos"></button>
+                        <button 
+                            pButton type="button" 
+                            label="Cancelar" 
+                            routerLink="/medicamentos">
+                        </button>
                     </div>
                 </div>
             </div>
