Corrigir dropdown horario - BASIS-214044

--- a/frontend/src/app/exames/components/formulario-horarios-agendados/formulario-horarios-agendados.component.html
+++ b/frontend/src/app/exames/components/formulario-horarios-agendados/formulario-horarios-agendados.component.html
@@ -24,7 +24,7 @@
     <div class="p-md-2 p-fluid">
         Tipo de marcação
         <span class="md-inputfield p-float-label sm-top-margin">
-            <p-dropdown [options]="tiposDeMarcacao" [optionLabel]="'tipoDeMarcacao'" 
+            <p-dropdown [options]="tiposDeMarcacao" [optionLabel]="'tipoDeMarcacaoNome'" 
                 [optionValue]="'id'" [filter]="true" placeholder="Selecione"
                 [resetFilterOnHide]="true" [showClear]="true">
             </p-dropdown>
