--- a/frontend/src/app/seguranca/components/servidores/formulario-servidor/formulario-servidor.component.html
+++ b/frontend/src/app/seguranca/components/servidores/formulario-servidor/formulario-servidor.component.html
@@ -1,4 +1,3 @@
-
 <form #form [formGroup]="formServidor" (ngSubmit)="submit()">
     <div class="card">
         <div class="p-col-12 p-grid">
@@ -7,9 +6,9 @@
                 <div class="p-col-12 p-grid">
                     <div class="p-md-6 p-lg-3">
                         <span class="p-float-label">
-                            <p-autoComplete field="nome" formControlName="codigo" 
-                                [suggestions]="listaPessoasServidor" (completeMethod)="buscaPessoas($event)"
-                                (onSelect)="aoSelecionarUmaPessoa($event)" [dropdown]="true"></p-autoComplete>
+                            <p-autoComplete field="nome" formControlName="codigo" [suggestions]="listaPessoasServidor"
+                                (completeMethod)="buscaPessoas($event)" (onSelect)="aoSelecionarUmaPessoa($event)"
+                                [dropdown]="true"></p-autoComplete>
                             <label>Nome</label>
                         </span>
                         <p-message severity="error" text="Nome do servidor obrigatório" *ngIf="
@@ -44,6 +43,10 @@
                             <label>Vínculo</label>
                         </span>
                     </span>
+                    <p-message severity="error" text="Vínculo obrigatório" *ngIf="
+                        formServidor.controls['vinculo'].errors?.required &&
+                        formServidor.controls['vinculo'].touched">
+                    </p-message>
                 </div>
                 <div class="p-md-3 p-sm-12">
                     <span class="p-float-label">
@@ -86,6 +89,11 @@
                         </p-dropdown>
                         <label>Situação</label>
                     </span>
+                    <p-message severity="error" text="Situação obrigatória" *ngIf="
+                            formServidor.controls['situacao'].errors?.required &&
+                            formServidor.controls['situacao'].touched">
+                    </p-message>
+
                 </div>
                 <div class="p-md-3 p-sm-12">
                     <span class="p-float-label">
@@ -93,6 +101,10 @@
                         </p-dropdown>
                         <label>Situação do servidor</label>
                     </span>
+                    <p-message severity="error" text="Situação do Servidor obrigatória" *ngIf="
+                            formServidor.controls['situacaoDoServidor'].errors?.required &&
+                            formServidor.controls['situacaoDoServidor'].touched">
+                    </p-message>
                 </div>
             </div>
 
@@ -103,6 +115,10 @@
                             formControlName="centroDeAtividadeIdLotacao"></p-dropdown>
                         <label>Centro de Atividade Lotação</label>
                     </span>
+                    <p-message severity="error" text="Centro de Atividade Lotação obrigatória" *ngIf="
+                            formServidor.controls['centroDeAtividadeIdLotacao'].errors?.required &&
+                            formServidor.controls['centroDeAtividadeIdLotacao'].touched">
+                    </p-message>
                 </div>
                 <div class="p-col">
                     <span class="p-col p-float-label">
@@ -120,6 +136,10 @@
                             formControlName="ocupacao"></p-dropdown>
                         <label>Ocupação</label>
                     </span>
+                    <p-message severity="error" text="Ocupação obrigatória" *ngIf="
+                            formServidor.controls['ocupacao'].errors?.required &&
+                            formServidor.controls['ocupacao'].touched">
+                    </p-message>
                 </div>
                 <div class="p-md-3 p-sm-12">
                     <span class="p-float-label">
@@ -135,6 +155,10 @@
                         </p-dropdown>
                         <label>Tipo de Remuneração</label>
                     </span>
+                    <p-message severity="error" text="Tipo de Remuneração obrigatório" *ngIf="
+                            formServidor.controls['tipoDeRemuneracao'].errors?.required &&
+                            formServidor.controls['tipoDeRemuneracao'].touched">
+                    </p-message>
                 </div>
                 <div class="p-md-3 p-sm-12">
                     <span class="p-float-label">
