--- a/frontend/src/app/exames/components/anticoagulante/anticoagulante.component.html
+++ b/frontend/src/app/exames/components/anticoagulante/anticoagulante.component.html
@@ -1,4 +1,4 @@
-<div class="p-grid p-fluid"> 
+<div class="anticoagulante p-grid p-fluid"> 
     <div class="p-col-12 p-grid">
     
         <div class="card card-w-title">
@@ -10,24 +10,27 @@
                     <div class="p-md-6 p-col-12">
                         Nome
                         <span class="md-inputfield p-float-label" style="margin-top: 5px;">
-                            <p-dropdown pTooltip="Selecione"></p-dropdown>
+                            <input type="text" pInputText class="p-inputtext" [(ngModel)]="nome"/>
                         </span>
                     </div>
 
                     <!--Ativos-->
-                    <div class="p-md-2 p-col-12" style="margin-top: 5px;">
-                        <label for="situacao">Situação:</label>
-                        <p-dropdown placeholder="Selecione" formControlName="ativo"></p-dropdown>
+                    <div class="p-md-3 p-col-12" style="margin-top: 5px;">
+                        <label>Ativo:</label> 
+                        <div class="ativo">
+                            <p-radioButton class="sim" [(ngModel)]="ativo" name="situacao" value=true label="Sim"></p-radioButton>
+                            <p-radioButton [(ngModel)]="ativo" name="situacao" value=false label="Não"></p-radioButton>
+                        </div>
                     </div>
                 </div>
 
                     <!--Botão Salvar e Cancelar-->
                 <div class="p-col-12 p-grid">
                     <div class="p-md-2 p-sm-5">
-                        <button pButton type="button" label="Salvar"></button>
+                        <button pButton type="button" label="Salvar" icon="pi pi-save" [disabled]="!validarFormulario()" (click)="cadastrar()"></button>
                     </div>
                     <div class="p-md-2 p-sm-5">
-                        <button pButton type="button" label="Cancelar" (click)="cancelar()"></button>
+                        <button pButton type="button" label="Cancelar" icon="pi pi-times" (click)="limparFormulario()"></button>
                     </div>
                 </div> 
             </div>
