--- a/frontend/src/app/exames/components/anticoagulante/anticoagulante.component.html
+++ b/frontend/src/app/exames/components/anticoagulante/anticoagulante.component.html
@@ -8,14 +8,14 @@
 
                     <!--Descrição-->
                     <div class="p-md-6 p-col-12">
-                        Nome
-                        <span class="md-inputfield p-float-label" style="margin-top: 5px;">
+                        <label>Nome</label> 
+                        <span class="md-inputfield p-float-label">
                             <input type="text" pInputText class="p-inputtext" [(ngModel)]="nome"/>
                         </span>
                     </div>
 
                     <!--Ativos-->
-                    <div class="p-md-3 p-col-12" style="margin-top: 5px;">
+                    <div class="p-md-6 p-col-12">
                         <label>Ativo:</label> 
                         <div class="ativo">
                             <p-radioButton class="sim" [(ngModel)]="ativo" name="situacao" value=true label="Sim"></p-radioButton>
