Adicionar cadastro de sala - BASIS-228235

--- a/frontend/src/app/shared/components/unidade-funcional/unidade-funcional.component.html
+++ b/frontend/src/app/shared/components/unidade-funcional/unidade-funcional.component.html
@@ -5,7 +5,7 @@
         pTooltip="Informe a Unidade Executora"
         [filter]="true"
         [resetFilterOnHide]="true" 
-        placeholder="Unidade Executora"
+        placeholder="Selecione"
         [options]="unidadesFuncionais"
         [optionLabel]="'nome'"
         [optionValue]="'id'"
