--- a/frontend/src/app/exames/components/formulario-salas/formulario-salas.component.html
+++ b/frontend/src/app/exames/components/formulario-salas/formulario-salas.component.html
@@ -7,7 +7,8 @@
                     <div class="p-md-2 p-col-12">
                     <label for="name">Código da Sala</label>
                         <span class="md-inputfield p-float-label">
-                            <input type="number"  class="codigo p-inputtext" [(ngModel)]="codigoDaSala"/>
+                            <input type="number" min="1" class="codigo p-inputtext" 
+                            [(ngModel)]="codigoDaSala"/>
                         </span>
                     </div>
                     <app-unidade-funcional #unidadeFuncional></app-unidade-funcional>
@@ -16,13 +17,15 @@
                     <div class="p-md-2 p-col-12">
                         <label for="name">Indentificação da Sala</label>
                         <span class="md-inputfield p-float-label">
-                            <input type="text" pInputText class="p-inputtext" [(ngModel)]="identificacaoDaSala"/>
+                            <input type="text" pInputText class="p-inputtext" 
+                            [(ngModel)]="identificacaoDaSala"/>
                         </span>
                     </div>
                     <div class="p-md-5 p-col-12">
                         <label for="name">Localização da Sala</label>
                         <span class="md-inputfield p-float-label">
-                            <input type="text" pInputText class="p-inputtext" [(ngModel)]="localizacaoDaSala"/>
+                            <input type="text" pInputText class="p-inputtext" 
+                            [(ngModel)]="locacaoDaSala"/>
                         </span>
                     </div>
                     <div class="p-md-5 p-col-12">
@@ -35,10 +38,10 @@
                 </div>
                 <div class="p-col-12 p-grid">
                     <div class="p-md-2 p-sm-5">
-                        <button pButton type="button" label="Salvar" icon="pi pi-save" [disabled]="!validarSala()" (click)="cadastrar()"></button>
+                        <button pButton type="button" label="Salvar" icon="pi pi-save" [disabled]="!validarFormulario()" (click)="cadastrar()"></button>
                     </div>
                     <div class="p-md-2 p-sm-5">
-                        <button pButton type="button" label="Cancelar" icon="pi pi-times" (click)="limparSala()"></button>
+                        <button pButton type="button" label="Cancelar" icon="pi pi-times" (click)="limparFormulario()"></button>
                     </div>
                 </div>
             </div>
