mudando os nomes de cadastro para formulario

--- a/frontend/src/app/exames/components/formulario-tipo-de-marcacao/formulario-tipo-de-marcacao.component.html
+++ b/frontend/src/app/exames/components/formulario-tipo-de-marcacao/formulario-tipo-de-marcacao.component.html
@@ -30,11 +30,11 @@
 
                 <div class="p-col-12 p-grid">
                     <div class="p-md-2">
-                        <button pButton type="button" label="Salvar" icon="pi-pi-save" (click)="cadastrar()" [disabled]="!validTipodDeMarcacao()"></button>
+                        <button pButton type="button" label="Salvar" icon="pi pi-save" (click)="cadastrar()" [disabled]="!validTipodDeMarcacao()"></button>
                     </div>
 
                     <div class="p-md-2">
-                        <button pButton type="button" label="Limpar" icon="pi-pi-times" (click)="limparTipoDeMarcacao()"></button>
+                        <button pButton type="button" label="Limpar" icon="pi pi-times" (click)="limparTipoDeMarcacao()"></button>
                     </div>
                 </div>
             </div>
