--- a/frontend/src/app/exames/components/exames/exames.component.html
+++ b/frontend/src/app/exames/components/exames/exames.component.html
@@ -1,26 +1,42 @@
 <div class="p-col-12 card card-w-title">
-  <h1>
-    Exames
-  </h1>
-  <div class="TableDiv">
-      <p-tabView class="tableContent">
-        <p-tabPanel header="por Exames">
-          <div class="container">
-            <span class="data-field-1">
-              <p-radioButton class="radial-button" name="filter" label="Pesquisar pelo primeiro nome" value="firstName"
-              ></p-radioButton>
+    <h1>Exames</h1>
+    <div class="TableDiv">
+        <p-tabView class="tableContent">
+            <p-tabPanel header="por Exames">
+                <div class="container">
+                    <span class="data-field-1">
+                        <p-radioButton
+                            class="radial-button"
+                            name="filter"
+                            label="Pesquisar pelo primeiro nome"
+                            value="firstName"
+                        ></p-radioButton>
 
-              <p-radioButton class="radial-button" name="filter" label="Pesquisar pelo nome completo" value="fullName"
-              ></p-radioButton>
-            </span>
+                        <p-radioButton
+                            class="radial-button"
+                            name="filter"
+                            label="Pesquisar pelo nome completo"
+                            value="fullName"
+                        ></p-radioButton>
+                    </span>
 
-            <span class="data-field-2">
+                    <span class="data-field-2">
+                        <p-checkbox
+                            label="Filtrar por unidade funcional"
+                            [binary]="true"
+                            pTooltip="Filtrar busca por exame disponíveis pela unidade funcional vinculada."
+                        ></p-checkbox>
 
-              <p-checkbox label="Filtrar por unidade funcional" [binary]="true"
-                pTooltip="Filtrar busca por exame disponíveis pela unidade funcional vinculada."></p-checkbox>
-
-              <label style="margin-bottom: 10px;">Exame:</label>
-              <p-dropdown [(ngModel)]="selectedExamID" [options]="exames" [optionLabel]="'nomeUsual'" [optionValue]="'id'"
+                        <label style="margin-bottom: 10px">Exame:</label>
+                        <p-autoComplete
+                            field="nome"
+                            [(ngModel)] = "selectedExamID"
+                            [suggestions]="exames"
+                            (completeMethod)="buscarExame($event)"
+                            (onSelect)="aoSelecionarExame($event)"
+                            [dropdown]="true"
+                        ></p-autoComplete>
+                        <!-- <p-dropdown [(ngModel)]="selectedExamID" [options]="exames" [optionLabel]="'nomeUsual'" [optionValue]="'id'"
                 filter="true" placeholder="Buscar...">
                 <ng-template let-exames pTemplate="item">
                   <div *ngIf="exames.id == 1"
@@ -52,83 +68,142 @@
                       class="celulaContent">{{exames.nome}}</span>
                   </div>
                 </ng-template>
-              </p-dropdown>
-            </span>
+              </p-dropdown> -->
+                    </span>
 
-            <span class="data-field-3" [formGroup]="itemSolicitacaoPorExame">
-              <p-checkbox class="urgent-checkbox" 
-              label="Urgente" 
-              [binary]="true"
-              formControlName="urgente"
-              ></p-checkbox>
+                    <span class="data-field-3" [formGroup]="itemSolicitacaoPorExame">
+                        <p-checkbox
+                            class="urgent-checkbox"
+                            label="Urgente"
+                            [binary]="true"
+                            formControlName="urgente"
+                        ></p-checkbox>
 
-              <span class="calendar-div">
-                Data/Hora programada:
-                <p-calendar class="calendar-input" showIcon="true" icon="pi pi-calendar" formControlName="dataProgramada"
-                  [readonlyInput]="true" showTime="true" dateFormat="dd/mm/yy"></p-calendar>
-              </span>
+                        <span class="calendar-div">
+                            Data/Hora programada:
+                            <p-calendar
+                                class="calendar-input"
+                                showIcon="true"
+                                icon="pi pi-calendar"
+                                formControlName="dataProgramada"
+                                [readonlyInput]="true"
+                                showTime="true"
+                                dateFormat="dd/mm/yy"
+                            ></p-calendar>
+                        </span>
 
-              <div class="dropdown-div">
-                Situação:
-                <p-dropdown placeholder="Selecione" [options]="situationDropdown" formControlName="situacao"></p-dropdown>
-              </div>
-            </span>
-          </div>
+                        <div class="dropdown-div">
+                            Situação:
+                            <p-dropdown
+                                placeholder="Selecione"
+                                [options]="situationDropdown"
+                                formControlName="situacao"
+                            ></p-dropdown>
+                        </div>
+                    </span>
+                </div>
 
-          <button pButton label="Adicionar" type="submit" icon="pi pi-plus" iconPos="left" (click)="cadastrarPorExame()" [disabled]="!validarPorExame()"></button>
+                <button
+                    pButton
+                    label="Adicionar"
+                    type="submit"
+                    icon="pi pi-plus"
+                    iconPos="left"
+                    (click)="cadastrarPorExame()"
+                    [disabled]="!validarPorExame()"
+                ></button>
+            </p-tabPanel>
 
-        </p-tabPanel>
+            <p-tabPanel header="por Lote">
+                <div class="container-2">
+                    <div class="lote-title">
+                        Tipo do lote:
+                        <div class="lote-field-1">
+                            <p-radioButton
+                                class="radial-button"
+                                name="filter"
+                                label="Unidade"
+                                value="val1"
+                            ></p-radioButton>
 
-        <p-tabPanel header="por Lote">
-          <div class="container-2">
-            <div class="lote-title">
-              Tipo do lote:
-              <div class="lote-field-1">
-                <p-radioButton class="radial-button" name="filter" label="Unidade" value="val1"
-                ></p-radioButton>
+                            <p-radioButton
+                                class="radial-button"
+                                name="filter"
+                                label="Grupo"
+                                value="val2"
+                            ></p-radioButton>
 
-                <p-radioButton class="radial-button" name="filter" label="Grupo" value="val2"
-                ></p-radioButton>
+                            <p-radioButton
+                                class="radial-button"
+                                name="filter"
+                                label="Especialidade"
+                                value="val3"
+                            ></p-radioButton>
+                        </div>
+                    </div>
+                    <div class="lote-field-2">
+                        <label>Grupo:</label>
+                        <p-dropdown
+                            [options]="groups"
+                            [optionLabel]="'nome'"
+                            [optionValue]="'id'"
+                            [(ngModel)]="group"
+                            placeholder="Selecione um grupo"
+                        ></p-dropdown>
+                    </div>
+                </div>
 
-                <p-radioButton class="radial-button" name="filter" label="Especialidade" value="val3"
-                ></p-radioButton>
-              </div>
-            </div>
-            <div class="lote-field-2">
-              <label>Grupo:</label>
-              <p-dropdown [options]="groups" [optionLabel]="'nome'" [optionValue]="'id'" [(ngModel)]="group"
-                placeholder="Selecione um grupo"></p-dropdown>
-            </div>
-          </div>
+                <app-exame #appExame *ngIf="group" [grupoID]="group"></app-exame>
 
-          <app-exame #appExame *ngIf="group" [grupoID]="group"></app-exame>
+                <span class="data-field-3" [formGroup]="itemSolicitacaoPorLote">
+                    <p-checkbox
+                        class="urgent-checkbox"
+                        label="Urgente"
+                        [binary]="true"
+                        formControlName="urgente"
+                    ></p-checkbox>
 
-          <span class="data-field-3" [formGroup]="itemSolicitacaoPorLote">
-            <p-checkbox class="urgent-checkbox" 
-            label="Urgente" 
-            [binary]="true"
-            formControlName="urgente"
-            ></p-checkbox>
+                    <span class="calendar-div">
+                        <label for="data">Data/Hora programada:</label>
+                        <p-calendar
+                            class="calendar-input"
+                            showIcon="true"
+                            icon="pi pi-calendar"
+                            [readonlyInput]="true"
+                            showTime="true"
+                            dateFormat="dd/mm/yy"
+                            formControlName="dataProgramada"
+                        ></p-calendar>
+                    </span>
 
-            <span class="calendar-div">
-              <label for="data">Data/Hora programada:</label>
-              <p-calendar class="calendar-input" showIcon="true" icon="pi pi-calendar"
-                [readonlyInput]="true" showTime="true" dateFormat="dd/mm/yy" formControlName="dataProgramada"></p-calendar>
-            </span>
+                    <div class="dropdown-div">
+                        <label for="situacao">Situação:</label>
+                        <p-dropdown
+                            placeholder="Selecione"
+                            [options]="situationDropdown"
+                            formControlName="situacao"
+                        ></p-dropdown>
+                    </div>
+                </span>
 
-            <div class="dropdown-div">
-              <label for="situacao">Situação:</label>
-              <p-dropdown placeholder="Selecione" [options]="situationDropdown" formControlName="situacao"></p-dropdown>
-            </div>
-          </span>
+                <button
+                    pButton
+                    label="Adicionar"
+                    type="button"
+                    icon="pi pi-plus"
+                    iconPos="left"
+                    (click)="cadastrarPorLote()"
+                    style="margin-top: 15px"
+                    [disabled]="!validarPorLote()"
+                ></button>
+            </p-tabPanel>
 
-          <button pButton label="Adicionar" type="button" icon="pi pi-plus" iconPos="left"
-            (click)="cadastrarPorLote()" style="margin-top: 15px;" [disabled]="!validarPorLote()"></button>
-
-        </p-tabPanel>
-
-        <app-tabela-exames #appTabela *ngIf="itemsSolicitacaoExame.length > 0" [itemsRecebidos]="itemsSolicitacaoExame" [flag]="flag"></app-tabela-exames>
-
-      </p-tabView>
-  </div>
+            <app-tabela-exames
+                #appTabela
+                *ngIf="itemsSolicitacaoExame.length > 0"
+                [itemsRecebidos]="itemsSolicitacaoExame"
+                [flag]="flag"
+            ></app-tabela-exames>
+        </p-tabView>
+    </div>
 </div>
